# model

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  test.sh
.buildkite/: docker-compose.yml  pipeline.yml
enum_derive/: Cargo.toml
enum_derive/src/: lib.rs
model/: Cargo.toml
model/src/: connection.rs  cursor.rs  error.rs  field_value.rs  index.rs  input.rs  lib.rs  migration.rs  model.rs  pgoutput.rs  query.rs  reference.rs  relation.rs  schema.rs  util.rs
model/src/crud/: bulk_create.rs  bulk_create_association.rs  create.rs  create_association.rs  delete.rs  delete_association.rs  join.rs  mod.rs  select.rs  update.rs  upsert.rs  util.rs
model/src/filter/: ast.rs  builder.rs  grammar.lalrpop  mod.rs  util.rs
model/src/sort_by/: grammar.lalrpop  mod.rs
model/tests/: crud.rs  dummy_records.json  pagination.rs  pgoutput.rs  relation.rs
model_derive/: Cargo.toml
model_derive/src/: lib.rs
model_wrapper/: Cargo.toml
model_wrapper/src/: lib.rs
