[workspace]

resolver = "2"

members = ["enum_derive", "model", "model_derive", "model_wrapper"]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["chrono", "uuid1", "rust_decimal"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde-with-float"] }
base64 = "0.21"
sqlx = { version = "0.8", features = [
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
    "runtime-tokio",
    "tls-rustls",
] }
lalrpop = "0.20"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
tokio = { version = "1.2", features = ["full"] }
tracing = "0.1.37"

model_derive = { path = "model_derive" }
model_wrapper = { path = "model_wrapper" }
enum_derive = { path = "enum_derive" }
