[package]
name = "model"
version = "0.0.1"
edition = "2021"

[build-dependencies]
lalrpop.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
base64.workspace = true
sqlx.workspace = true
lalrpop-util.workspace = true

model_derive.workspace = true
enum_derive.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
sqlx.workspace = true
